--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"I am a chocolate banana"
+<!DOCTYPE html>
+<html>
+<body>
+    "I am a chocolate banana"
+
+   <h1>HTML Article on Links </h1>
+   <p><a href="https://rivertamdance.github.io/sudoku/">Click this to navigate to the Google home page</a></p>
+</body>
+</html>
