--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <body>
     "I am a chocolate banana"
 
+    <label for="name">Name (4 to 8 characters):</label>
+
+    <input type="text" id="name" name="name" required
+    minlength="4" maxlength="8" size="10">
+
    <h1>HTML Article on Links </h1>
-   <p><a href="https://rivertamdance.github.io/sudoku/">Click this to navigate to the Google home page</a></p>
+   <p><a href="https://rivertamdance.github.io/sudoku">Click this to navigate to the Google home page</a></p>
 </body>
 </html>
