floating div test

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </body>
 </html> -->
 
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html>
 <head>
 <style>
@@ -97,5 +97,145 @@
       }
    }
 </script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<!-- https://coder-coder.com/display-divs-side-by-side/ -->
+<style>
+
+:root{
+
+--wid: 48px;
+
+}
+
+
+.sudoku_board {
+
+    border: 1px solid black;
+    width: 450px;
+    height: 450px;
+
+}
+
+.small_square {
+
+border: 1px solid red;
+float: left;
+width: var(--wid);
+height: var(--wid);
+
+}
+
+div.topleft {
+
+    border: 1px solid green;
+    margin-left: 200px;
+    width: var(--wid);
+    height: var(--wid);
+
+}
+
+
+
+</style>
+</head>
+<body>
+    <div class = "sudoku_board">
+
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+        <div class = "small_square"></div>
+
+    </div>
 </body>
 </html>
