Wanted to put Nick's quote somewhere

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ input::-webkit-inner-spin-button {
             }
         }
     </script>
-
+What would you do if you had 10x the agency? - Nick Cammarata
 
 </body>
 </html>
